[gd_scene load_steps=37 format=2]

[ext_resource path="res://Prototype/VisualAssets/Tiles/Tiles.png" type="Texture" id=1]
[ext_resource path="res://Font/Mario-Kart-DS.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Prototype/Scenes/Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Prototype/Scripts/Kitchen/FoodManager.gd" type="Script" id=4]
[ext_resource path="res://Prototype/Scripts/Kitchen/Kitchen.gd" type="Script" id=5]
[ext_resource path="res://Prototype/Scenes/Kitchen/Caldron.tscn" type="PackedScene" id=6]
[ext_resource path="res://Prototype/Scripts/Kitchen/CladronManager.gd" type="Script" id=7]
[ext_resource path="res://Prototype/Scripts/Kitchen/Spawner.gd" type="Script" id=8]
[ext_resource path="res://Prototype/Scripts/Kitchen/CanvasLayer.gd" type="Script" id=9]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 16, 16, 0, 16, 0, 16, 16, 16 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=18]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=19]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=20]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=21]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=22]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=23]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=24]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=25]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=26]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=27]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=28]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="TileSet" id=12]
0/name = "Tiles.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( -32, -32, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Tiles.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 96, 96 )
1/tile_mode = 1
1/autotile/bitmask_mode = 1
1/autotile/bitmask_flags = [ Vector2( 0, 0 ), 176, Vector2( 0, 1 ), 146, Vector2( 0, 2 ), 146, Vector2( 0, 3 ), 146, Vector2( 0, 4 ), 146, Vector2( 0, 5 ), 50, Vector2( 1, 0 ), 56, Vector2( 1, 5 ), 56, Vector2( 2, 0 ), 56, Vector2( 2, 5 ), 56, Vector2( 3, 0 ), 56, Vector2( 3, 5 ), 56, Vector2( 4, 0 ), 56, Vector2( 4, 5 ), 56, Vector2( 5, 0 ), 152, Vector2( 5, 1 ), 146, Vector2( 5, 2 ), 146, Vector2( 5, 3 ), 146, Vector2( 5, 4 ), 146, Vector2( 5, 5 ), 26 ]
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 16, 16 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 1 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 17 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 18 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 19 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 20 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 21 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 22 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 23 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 24 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 25 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 26 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 27 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 28 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[sub_resource type="DynamicFont" id=29]
size = 14
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=30]
size = 14
font_data = ExtResource( 2 )

[node name="Kitchen" type="Node2D"]
script = ExtResource( 5 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 128, 112 )

[node name="FoodManager" type="Node2D" parent="."]
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}
maxNumberOfFood = 7
lowNumberOfFood = 3
MIN_IMPULSE = -15
MAX_IMPULSE = 15
MIN_TORQUE = -0.3
MAX_TORQUE = 0.3

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 12 )
cell_size = Vector2( 16, 16 )
collision_layer = 7
collision_mask = 7
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 2, 2, 1, 2, 3, 1, 3, 4, 1, 327683, 5, 1, 4, 6, 1, 2, 7, 1, 327682, 8, 1, 1, 9, 1, 4, 10, 1, 4, 11, 1, 2, 12, 1, 327684, 13, 1, 4, 14, 1, 327682, 15, 1, 5, 65536, 1, 196608, 65551, 1, 131072, 131072, 1, 262149, 131087, 1, 65536, 196608, 1, 131077, 196623, 1, 65541, 262144, 1, 262144, 262159, 1, 65541, 327680, 1, 131077, 327695, 1, 262149, 393216, 1, 262144, 393231, 1, 196608, 458752, 1, 196613, 458767, 1, 262149, 524288, 1, 196608, 524303, 1, 196613, 589824, 1, 65536, 589839, 1, 131077, 655360, 1, 65536, 655375, 1, 131072, 720896, 1, 262149, 720911, 1, 262144, 786432, 1, 262144, 786447, 1, 65541, 851968, 1, 327680, 851969, 1, 327682, 851970, 1, 4, 851971, 1, 3, 851972, 1, 3, 851973, 1, 327682, 851974, 1, 327683, 851975, 1, 1, 851976, 1, 4, 851977, 1, 3, 851978, 1, 327684, 851979, 1, 3, 851980, 1, 4, 851981, 1, 3, 851982, 1, 1, 851983, 1, 327685 )
__meta__ = {
"_edit_lock_": true
}

[node name="CladronManager" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="Caldron" parent="CladronManager" instance=ExtResource( 6 )]
position = Vector2( 72, 64 )

[node name="Caldron2" parent="CladronManager" instance=ExtResource( 6 )]
position = Vector2( 184, 152 )

[node name="Spawner" type="Node2D" parent="."]
script = ExtResource( 8 )
defaultTime = 2.0

[node name="Timer" type="Timer" parent="Spawner"]
wait_time = 2.267

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 9 )
controller_movement_tutorial = "R1 + LEFT JOYSTICK to MOVE"
keyboard_movement_tutorial = "RIGHT button to MOVE"
controller_shooting_tutorial = "L1 + LEFT JOYSTICK to KICK"
keyboard_shooting_tutorial = "LEFT button to KICK"

[node name="MoveTutorial" type="RichTextLabel" parent="CanvasLayer"]
margin_left = 16.0
margin_top = 168.0
margin_right = 240.0
margin_bottom = 184.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/normal_font = SubResource( 29 )
bbcode_enabled = true

[node name="KickTutorial" type="RichTextLabel" parent="CanvasLayer"]
margin_left = 16.0
margin_top = 184.0
margin_right = 240.0
margin_bottom = 200.0
custom_fonts/normal_font = SubResource( 30 )
bbcode_enabled = true

[connection signal="kicked" from="Player" to="CanvasLayer" method="_on_Player_kicked"]
[connection signal="moved" from="Player" to="CanvasLayer" method="_on_Player_moved"]
[connection signal="good_food" from="FoodManager" to="Spawner" method="_on_FoodManager_good_food"]
[connection signal="low_food" from="FoodManager" to="Spawner" method="_on_FoodManager_low_food"]
[connection signal="min_food" from="FoodManager" to="Spawner" method="_on_FoodManager_min_food"]
[connection signal="timeout" from="Spawner/Timer" to="Spawner" method="_on_Timer_timeout"]
